# GIEPY

./: .gitattributes  .gitignore  .gitmodules  .vimrc_local  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  ct.sh  index.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.sass-cache/45cb3ca13c00f5182c3271c530360f6b108994c9/: jekyll-theme-slate.scssc  rouge-github.scssc
_layouts/: page.html
advanced/: multiprj.md  other.md  pixi.md  spt.md  userdef.md
asm/: .ctags  .gitignore  .vimrc_local  giepy.asm  patch.sh  smwlibs.asm
asm/giepy/: cluster.asm  extended.asm  generator.asm  initializer.asm  load.asm  normspr.asm  owspr.asm  scroll.asm  shooter.asm  tweaks.asm
asm/giepy/debug/: clsp_gen.asm  cscroller.asm  exgenerator.asm  exshooter.asm  hbros.asm
asm/include/: asar.inc  common.inc  config.inc  inschk.inc  macros.inc  pixi.inc  sa1def.inc  tr_lodef.inc  tr_sa1def.inc  trasm.inc
asm/include/pixi/: cluster_header.inc  extended_header.inc  generator_header.inc  normal_header.inc  shooter_header.inc
asmspec/: asar.md  library.md  ram.md  trasm.md
cui/: how.md
doc/: readme.txt  readme_jp.txt
etc/: config_file.txt  extra_info.txt  list.txt
fspecs/: list.md  spconfig.md
gui/: how.md
html/: _asar_8c.html  _asar_8h.html  _asar_8h_source.html  _asm_type_8h.html  _asm_type_8h_source.html  _assemble_all_8c.html  _assemble_all_8h.html  _assemble_all_8h_source.html  _cfg_data_8h.html  _cfg_data_8h_source.html  _chk_asm_type_8c.html  _chk_asm_type_8h.html  _chk_asm_type_8h_source.html  _collect_info_8c.html  _collect_info_8h.html  _collect_info_8h_source.html  _console_8c.html  _console_8h.html  _console_8h_source.html  _dir_button_proc_8c.html  _dir_button_proc_8h.html  _dir_button_proc_8h_source.html  _dir_opt_dialog_proc_8c.html  _dir_opt_dialog_proc_8h.html  _dir_opt_dialog_proc_8h_source.html  _environment_8c.html  _environment_8h.html  _environment_8h_source.html  _exbytes_8c.html  _exbytes_8h.html  _exbytes_8h_source.html  _export_8c.html  _export_8h.html  _export_8h_source.html  _ext_cls_spr_8c.html  _ext_cls_spr_8h.html  _ext_cls_spr_8h_source.html  _file_8c.html  _file_8h.html  _file_8h_source.html  (+325 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  files_0.js  (+47 more)
include/common/: AsmType.h  CfgData.h  Environment.h  Funex.h  GetFmtStr.h  InsertList.h  MewInterfaces.h  Observer.h  PipeMan.h  defaults.h  defines.h  dllCommon.h  msgmap_eng.h  msgmap_jp.h  puts.h  srcpath.h  strres.h  strres_eng.h  strres_jp.h  version.h
include/cui/: Console.h  Option.h  ParseCmdDefs.h
include/dll/: Mewthree.def  MewthreeDll.h  asardll.h
include/mewthree/: Asar.h  AssembleAll.h  ChkAsmType.h  CollectInfo.h  Exbytes.h  Export.h  ExtClsSpr.h  InitializeRom.h  InsInfo.h  Json.h  Libraries.h  LibsInsertMan.h  MewEnv.h  Mewthree.h  ParseCfg.h  ParseList.h  Rats.h  RomMap.h  SearchPath.h  Signature.h  Sprites.h  Trasm.h  Uninstall.h  Workspace.h
include/smw/: libsmw.h
include/win32/: DirButtonProc.h  DirOptDialogProc.h  FileComboBoxProc.h  InfoDialogProc.h  IniMan.h  MainWndProc.h  NewLVEditProc.h  NewListViewProc.h  PieeDialog.h  icon.h  menures.h
junk_code/: Resource.c  Resource.h  ResourceTest.cpp
samples/: list.txt
samples/libraries/: libAkagi.asm  libGarbage.asm  libScroller.asm
samples/sprites/initializer/: boo_ring_gen.asm  boo_ring_gen.cfg
samples/sprites/normal/pixi/: FireBro.cfg  FireBro.json  readme.txt
samples/sprites/normal/tweak/: spring.cfg
samples/sprites/scroller/: coin.asm  coin.cfg  coin.json  l2_onoff_scr.asm  l2_onoff_scr.json
samples/sprites/shooter/: grp3cshoot.asm  grp3cshoot.cfg
scripts/: InsertPrompt.bat  giepy.bat  tee.bat
src/: CMakeLists.txt
src/common/: Environment.c  Funex.c  GetFmtStr.c  PipeMan.c  PipeMan.protected.h
src/cui/: Console.c  Observer.c  Option.c  ParseCmdDefs.c  main.c
src/dll/: MewthreeDll.c  asardll.c
src/mewthree/: Asar.c  AssembleAll.c  ChkAsmType.c  CollectInfo.c  Exbytes.c  Export.c  ExtClsSpr.c  InitializeRom.c  Json.c  Libraries.c  LibsInsertMan.c  LibsInsertMan.protected.h  MewEnv.c  MewInterfaces.c  Mewthree.c  Mewthree.protected.h  ParseCfg.c  ParseList.c  Rats.c  RomMap.c  SearchPath.c  Sprites.c  Trasm.c  Uninstall.c  Workspace.c
src/res/: giepy.rc  mewthree.rc  piee.rc
src/smw/: libsmw.c
src/win32/: DirButtonProc.c  DirOptDialogProc.c  FileComboBoxProc.c  InfoDialogProc.c  IniMan.c  MainWndProc.c  NewLVEditProc.c  NewListViewProc.c  Observer.c  PieeDialog.c  wmain.c
tec/: libraries.md  macros.md  pg_design.md  syspatch.md
tests/: CMakeLists.txt
tests/common/: EnvironmentTest.cpp  FunexTest.cpp  GetFmtStrTest.cpp  PipeManTest.cpp
tests/cui/: ConsoleTest.cpp  ObserverTest.cpp  OptionTest.cpp  ParseCmdDefsTest.cpp
tests/dll/: .MewthreeDllTest.cpp.swp  MewthreeDllTest.cpp
tests/file/: File.protected.h  RomFile.protected.h  TestRomFile.c  TestRomFile.h
tests/mewthree/: AsarTest.cpp  AssembleAllTest.cpp  ChkAsmTypeTest.cpp  CollectInfoTest.cpp  ExbytesTest.cpp  ExportTest.cpp  ExtClsSprTest.cpp  InitializeRomTest.cpp  JsonTest.cpp  LibrariesTest.cpp  LibsInsertManTest.cpp  MewEnvTest.cpp  MewInterfacesTest.cpp  MewthreeTest.cpp  ParseCfgTest.cpp  ParseListTest.cpp  RatsTest.cpp  RomMapTest.cpp  SearchPathTest.cpp  SpritesTest.cpp  TrasmTest.cpp  UninstallTest.cpp  WorkspaceTest.cpp
tests/smw/: libsmwTest.cpp
tests/win32/: DirButtonProcTest.cpp  DirOptDialogProcTest.cpp  FileComboBoxProcTest.cpp  InfoDialogProcTest.cpp  IniManTest.cpp  MainWndProcTest.cpp  NewLVEditProcTest.cpp  NewListViewProcTest.cpp  PieeDialogTest.cpp
toolchain/: mingw-x64.cmake  mingw-x86.cmake
